# OpenAIWorkshop

./: AZURE_INFRASTRUCTURE_SUMMARY.md  AZURE_QUICK_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  azure.yaml
.github/workflows/: destroy.yml  docker-application.yml  docker-mcp.yml  documentation-checks.yml  infrastructure.yml  orchestrate.yml  update-containers.yml
agentic_ai/: .dockerignore
agentic_ai/agents/agent_framework/multi_agent/: reflection_agent.py
agentic_ai/applications/: .env.sample  backend.py  uv.toml
agentic_ai/applications/react-frontend/: package-lock.json
agentic_ai/applications/react-frontend/src/: App.js
agentic_ai/applications/react-frontend/src/hooks/: useWebSocket.js
agentic_ai/applications/react-frontend/src/services/: websocket.js
infra/: GITHUB_ACTIONS_SETUP.md  README.md  main.azd.bicep  main.azd.bicepparam  main.bicep
infra/bicep/: AZD_DEPLOYMENT_GUIDE.md  deploy.ps1  main.azd.bicep
infra/bicep/modules/: application.bicep
infra/modules/: application.bicep  container-apps-environment.bicep  cosmosdb.bicep  mcp-service.bicep
infra/terraform/: _aca-be.tf  _aca-mcp.tf  deploy.ps1  dev.tfvars  local.env.ps1  main.tf  network.tf  providers.tf  variables.tf
tests/: test_agent_evaluation.py
tests/evaluation/: .env.template  README.md  __init__.py  agent_comparison_results.json  agent_evaluator.py  agent_runner.py  llm_judge_evaluator.py  pyproject.toml  test_agent_comparison.py  test_data.jsonl  test_scenario_evaluation.py
