[project]
name = "agent-evaluation"
version = "0.1.0"
description = "Agent evaluation framework for Contoso AI Workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Agent Framework (same as applications)
    "agent-framework==1.0.0b260107",
    
    # Azure OpenAI
    "openai>=2.5.0",
    "azure-identity>=1.15.0",
    
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    
    # Evaluation SDK (optional - for AI-assisted metrics)
    "azure-ai-evaluation>=1.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require MCP + Azure OpenAI)",
    "evaluation: Agent evaluation tests",
    "slow: Slow tests (full evaluation pipeline)",
    "comparison: Agent comparison tests",
]
